minikube deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://auth.default.svc.cluster.local:9000/auth"
    nginx.ingress.kubernetes.io/auth-signin: "http://auth.default.svc.cluster.local:9000/signin"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-User,X-UserId"
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8000
          - path: /accounts
            pathType: Prefix
            backend:
              service:
                name: billing-service
                port:
                  number: 8090
          - path: /items
            pathType: Prefix
            backend:
              service:
                name: inventory-service
                port:
                  number: 8091
          - path: /persons
            pathType: Prefix
            backend:
              service:
                name: person-service
                port:
                  number: 8000
